--- a/fadno-braids.cabal
+++ b/fadno-braids.cabal
@@ -1,4 +1,5 @@
 name:                fadno-braids
+category:            Data, Math, Algebra
 version:             0.0.2
 synopsis:            Braid representations in Haskell
 description:  Braids represented as Haskell types with support for generation and transformations.
@@ -9,6 +10,9 @@ author:              Stuart Popejoy
 maintainer:          spopejoy@panix.com
 build-type:          Simple
 cabal-version:       >=1.10
+source-repository head
+  type:     git
+  location: https://github.com/slpopejoy/fadno-braids.git
 
 library
   exposed-modules:
