--- a/fadno-braids.cabal
+++ b/fadno-braids.cabal
@@ -1,6 +1,6 @@
 name:                fadno-braids
 category:            Data, Math, Algebra
-version:             0.0.4
+version:             0.0.5
 synopsis:            Braid representations in Haskell
 description:  Braids represented as Haskell types with support for generation and transformations.
 homepage:            http://github.com/slpopejoy/
@@ -21,14 +21,14 @@ library
                   Fadno.Braids.Graphics
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.9
+  build-depends:       base >=4.8 && <4.10
                      , containers
                      , data-default >= 0.5.3
                      , diagrams == 1.3.*
                      , diagrams-lib == 1.3.*
                      , diagrams-rasterific == 1.3.*
-                     , lens == 4.13.*
+                     , lens >= 4.13 && < 4.15
                      , random >= 1.1
-                     , transformers-compat == 0.4.*
+                     , transformers-compat > 0.4 && < 0.6
   hs-source-dirs: src
   default-language:    Haskell2010
