--- a/fadno-braids.cabal
+++ b/fadno-braids.cabal
@@ -1,6 +1,6 @@
 name:                fadno-braids
 category:            Data, Math, Algebra
-version:             0.0.5
+version:             0.1.0
 synopsis:            Braid representations in Haskell
 description:  Braids represented as Haskell types with support for generation and transformations.
 homepage:            http://github.com/slpopejoy/
@@ -10,7 +10,6 @@ author:              Stuart Popejoy
 maintainer:          spopejoy@panix.com
 build-type:          Simple
 cabal-version:       >=1.10
-Tested-with: GHC == 7.10.3, GHC == 8.0.1
 source-repository head
   type:     git
   location: https://github.com/slpopejoy/fadno-braids.git
@@ -23,14 +22,13 @@ library
                   Fadno.Braids.Graphics
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.8 && <4.10
-                     , containers
-                     , data-default >= 0.5.3
-                     , diagrams == 1.3.*
-                     , diagrams-lib == 1.3.*
-                     , diagrams-rasterific == 1.3.*
-                     , lens >= 4.13 && < 4.15
-                     , random >= 1.1
-                     , transformers-compat > 0.4 && < 0.6
+  build-depends:       base == 4.9.*
+                     , containers == 0.5.*
+                     , data-default == 0.7.*
+                     , diagrams == 1.4.*
+                     , diagrams-lib == 1.4.*
+                     , diagrams-rasterific == 1.4.*
+                     , lens == 4.15.*
+                     , random == 1.1.*
   hs-source-dirs: src
   default-language:    Haskell2010
