--- a/.github/workflows/applications.yml
+++ b/.github/workflows/applications.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ghc: ['8.6.5', '8.8.4', '8.10.2']
+        ghc: ['8.6.5', '8.8.4'] # , '8.10.2']
         cabal: ['3.2.0.0']
         os: ['ubuntu-20.04']
 
