--- a/fadno-braids.cabal
+++ b/fadno-braids.cabal
@@ -1,6 +1,6 @@
 name:                fadno-braids
 category:            Data, Math, Algebra
-version:             0.1.4
+version:             0.2
 synopsis:            Braid representations in Haskell
 description:  Braids represented as Haskell types with support for generation and transformations.
 homepage:            http://github.com/slpopejoy/
@@ -22,7 +22,7 @@ library
                   Fadno.Braids.Graphics
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >= 4.9
+  build-depends:       base >= 4.9 && < 4.20
                      , containers >= 0.5
                      , data-default >= 0.7
                      , diagrams >= 1.4
